--- a/index.html
+++ b/index.html
@@ -5,18 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Form</title>
-
-  <style>
-    .label {
-      display: flex;
-      justify-content: space-between;
-      width: 300px;
-    }
-    input {
-      width: 200px;
-      margin-left: auto;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
