JC19-100 Changes after CR

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </label>
     <label class="label">
       Mass:
-      <input class="form-input" type="text" id="mass" name="mass" value="77">
+      <input class="form-input" type="number" id="mass" name="mass" value="77">
     </label>
     <label class="label">
       Scin color:
-      <input class="form-input" type="number" id="skin-color" name="skin-color" value="fair">
+      <input class="form-input" type="text" id="skin-color" name="skin-color" value="fair">
     </label>
     <label class="label">
       Home world:
@@ -56,7 +56,7 @@
       Birth year:
       <input class="form-input" type="text" id="birth_year" name="birth_year" value="19BBY">
     </label>
-    <input type="submit" value="Submit">
+    <button type="submit">Submit</button>
   </form>
 
   <script src="script.js"></script>
